# orders

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  postgresql.conf  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 824e21da00d2_init.py
app/: main.py  tasks.py
app/api/: auth.py  orders.py
app/core/: config.py  database.py  dependencies.py  redis_init.py  security.py
app/kafka/: consumer.py  kafka_client.py
app/models/: models.py
app/repositories/: base.py  order.py  user.py
app/schemas/: auth_schemas.py  order_schemas.py
app/services/: auth_service.py  jwt_services.py  order_service.py
app/utils/: limiter.py  logs.py
tests/integration/: conftest.py  test_api.py
tests/unit/: conftest.py  unit.py
